评论管理，个人设置完成

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -25,3 +25,15 @@
   height: 178px;
   display: block;
 }
+
+// 富文本
+.container-pubish .ql-editor{
+  height: 300px;
+}
+.container-pubish .ql-toolbar.ql-snow{
+  padding: 0;
+}
+
+.el-dialog__body{
+  padding-bottom: 0;
+}
